Fixed  next project alignment on iOS devices. + Deploy to production.

--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -401,9 +401,14 @@ header {
             font: 500 normal 80px/90px $italiana, serif;
           }
         }
-      }
-      div {
-        padding-top: 7vw;
+        div {
+          width: 85%;
+          // padding-top: 7vw;
+
+          span {
+            position: initial;
+          }
+        }
       }
     }
     .datas {
